<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cst2335.finalproject.SoccerNewsDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dh_detailfragment_news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <ImageView
            android:id="@+id/dh_detailfragment_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <TextView
            android:id="@+id/dh_detailfragment_link_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:text="@string/link"/>
        <TextView
            android:id="@+id/dh_detailfragment_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/dh_detailfragment_date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/dh_detailfragment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/dh_detailfragment_desc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple_200"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/dh_detailfragment_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/dh_detailfragment_save_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addToFav"/>
        <Button
            android:id="@+id/dh_detailfragment_open_browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openInBrowser"/>
        <Button
            android:id="@+id/dh_detailfragment_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hide"/>

    </LinearLayout>

</FrameLayout>